--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>me.kolinger.pgrf2</groupId>
-    <artifactId>opengl</artifactId>
+    <artifactId>grapher</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <dependencies>
